# Art-ZFEM-2D

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
Elliptic_Extended_PCC_2D/: CMakeLists.txt  main.cpp
Elliptic_Extended_PCC_2D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
Elliptic_Extended_PCC_2D/src/PDETools/: CMakeLists.txt
Elliptic_Extended_PCC_2D/src/PDETools/Mesh/: CMakeLists.txt  Extended_PDE_Mesh_Utilities.hpp
Elliptic_PCC_2D/: CMakeLists.txt  integration_test.py  main.cpp
Elliptic_PCC_2D/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
Elliptic_PCC_DFN/: CMakeLists.txt  integration_test.py  main.cpp
Elliptic_PCC_DFN/src/: CMakeLists.txt  assembler.cpp  assembler.hpp  program_configuration.hpp  program_utilities.cpp  program_utilities.hpp  test_definition.hpp
Elliptic_PCC_DFN/src/PDETools/: CMakeLists.txt
Elliptic_PCC_DFN/src/PDETools/Mesh/: CMakeLists.txt  Extended_PDE_Mesh_Utilities.hpp
Mesh/2D/DFN_Frac_3/M1/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv  Cell2Ds_additional_info.csv  geometric_data.txt
Mesh/2D/DFN_Frac_3/M2/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv  Cell2Ds_additional_info.csv  geometric_data.txt
